# localmaxxing

./: .gitignore  README.md  pyproject.toml
results/: gemma-4-12b-vlm-demo.json  latest.json  run_20260623_popular-roster.json  run_20260624_172032.json  run_20260625_104125.json  run_20260626_153225.json  run_20260626_194818.json
results/models/: LiquidAI__LFM2.5-230M-MLX-4bit.json  mlx-community__Devstral-Small-2-24B-Instruct-2512-4bit.json  mlx-community__LFM2.5-1.2B-Instruct-4bit.json  mlx-community__LFM2.5-8B-A1B-MLX-4bit.json  mlx-community__Ministral-3-3B-Instruct-2512-4bit.json  mlx-community__Mistral-Small-3.2-24B-Instruct-2506-4bit.json  mlx-community__Phi-4-mini-instruct-4bit.json  mlx-community__Qwen3.5-27B-Claude-4.6-Opus-Distilled-MLX-4bit.json  mlx-community__Qwen3.5-2B-4bit.json  mlx-community__Qwen3.5-4B-4bit.json  mlx-community__Qwen3.5-9B-4bit.json  mlx-community__Qwen3.6-27B-4bit.json  mlx-community__Qwen3.6-35B-A3B-4bit.json  mlx-community__gemma-3-12b-it-qat-4bit.json  mlx-community__gemma-3-27b-it-qat-4bit.json  mlx-community__gemma-3-4b-it-qat-4bit.json  mlx-community__gemma-4-12B-it-4bit.json  mlx-community__gemma-4-26b-a4b-it-4bit.json  mlx-community__gemma-4-e2b-it-4bit.json  mlx-community__gemma-4-e4b-it-4bit.json  mlx-community__phi-4-4bit.json
scripts/: backfill_quality.py  run_newmodels_later.sh
src/mlx_bench/: __init__.py  cli.py  models.py  prefill.py  quality.py  runner.py  schema_test.py  server.py  speed.py
