[project]
name = "mlx-bench"
version = "0.1.0"
description = "Benchmark popular OSS LLMs on the MLX backend: throughput at 1/2/4/8 concurrency and JSON-schema-following capability."
requires-python = ">=3.10"
dependencies = [
    "mlx-lm>=0.31.1",
    "huggingface-hub>=0.27",
    "jsonschema>=4.0",
    "mlx-vlm>=0.6.3",
]

[project.scripts]
mlx-bench = "mlx_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_bench"]
